* Fix some typos in the existing pages
* Add a section on learning resources to the Additional page

--- a/modules/additional/_posts/2024-02-23-homework.md
+++ b/modules/additional/_posts/2024-02-23-homework.md
@@ -16,7 +16,7 @@ some of the samples in the Bioproject PRJNA575338 and build a phylogeny. Breakin
 
 2. How can you download this reference genome in Genbank format?
 
-3. How many sequences are there the PRJNA575338 Bioproject?
+3. How many sequences are there in the PRJNA575338 Bioproject?
 
 4. How can you download these sequence reads?
 
