--- a/modules/unix-linux-introduction/_posts/2024-02-02-task-two.md
+++ b/modules/unix-linux-introduction/_posts/2024-02-02-task-two.md
@@ -4,7 +4,7 @@ title: Fetching and analysing data with shell scripts
 
 ### Task 2: Fetch and analyse data
 
-In the `~/data` directory you will find two files: `file_list1.csv` and `file_list2.csv`. Here is a part of 
+In the `~`/data` directory, you will find two files: `file_list1.csv` and `file_list2.csv`. Here is a part of 
 `file_list1.csv`:
 
 ```
@@ -15,7 +15,7 @@ SRR8364253,https://pathogen-genomics-march-2024.sanbi.ac.za/data/shell/reads/SRR
 ```
 
 The structure of the file is a list of sample names and then URLs for some gzipped FASTQ files. We would like to
-fetch all the sequence files listed in `file_list1.txt`. Before that we need to focus on shell scripting.
+fetch all the sequence files listed in `file_list1.txt`. Before that, we need to focus on shell scripting.
 
 #### Shell variables
 
@@ -87,7 +87,7 @@ The are two ways to run a shell script. Either you can tell `bash` to run the sc
 bash fetch.sh
 ```
 
-Or, if you make the shell script file executable with the `chmod a+x` command, you can run the script my referring to its name (including the 
+Or, if you make the shell script file executable with the `chmod a+x` command, you can run the script by referring to its name (including the 
 full or relative path), e.g.
 
 ```bash
@@ -125,7 +125,7 @@ Param1: one
 Param2:
 ```
 
-Notice that in the first example the third parameter is ignored and in the second example the second parameter is blank.
+Notice that in the first example, the third parameter is ignored and in the second example the second parameter is blank.
 
 ##### Shell flags
 
@@ -175,7 +175,7 @@ lines in the file and runs the loop once for each line (and for each word in a l
 called _command substitution_ and what it does is to replace the `$()` with the output (`stdout`) of the command inside the brackets.
 
 For example, using an example from Task 1, `$(tail -n+2 cases.csv |cut -d, -f3)` would give a list of all the dates in the `cases.csv` file. When
-this is used with a `for` loop, all whitespace (spaces, tabs and newlines) acts to separate _items_ and then loop runs once for each item in the
+this is used with a `for` loop, all whitespace (spaces, tabs and newlines) acts to separate _items_ and then the loop runs once for each item in the
 list. For a more formal description of what command substitution is doing, look in the [GNU Bash manual](https://www.gnu.org/software/bash/manual/html_node/Command-Substitution.html).
 
 
@@ -198,7 +198,7 @@ which is expressed using square brackets (`[[ ]]`) but any command can be used. 
 and any other exit status counts as False.
 
 The square bracket tests (`[[ ]]`) allow [conditional expressions](https://www.gnu.org/software/bash/manual/html_node/Bash-Conditional-Expressions.html)
-and combinations of these conditional expressions. Some of the most common test are `-f` to test if a file exists and `-d` to test if a path is a
+and combinations of these conditional expressions. Some of the most common tests are `-f` to test if a file exists and `-d` to test if a path is a
 directory, `=` to test if two strings are equal and `-eq` to test if two numbers are equal. There are many others, please refer to the linked tutorials.
 
 Expressions can be combined with logical operators: `&&` for AND, `||` for OR, `!` for NOT (changing True to False or False to True) and brackets `( )`
@@ -249,8 +249,7 @@ the script won't carry on running.
 (the `! -f` means "file does not exist") then a message is printed to `stderr` (that's what the `>&2` redirect does) and the program exits
 with an error (`exit 1`).
 
-5. Lines 13 through check for the existing of a directory (a subdirectory of the directory in which this script is run) called `tracking` and
-create it if it doesn't exist. This directory will be used to keep track fo which file has been downloaded.
+5. Lines 13 through check for the existence of a directory (a subdirectory of the directory in which this script is run) called `tracking` and create it if it doesn't exist. This directory will be used to keep track of which file has been downloaded.
 
 6. Line 17 sets up the loop. `cut -d, -f2` is used to extract the URL part from the LISTFILE and the list of URLs (links) is returned using a `$()`
 operator. 
@@ -264,8 +263,8 @@ the URL. The OUTPUT variable is set to the destination filename.
 file.
 
 10. Line 23 is commented out but shows how to do a download using `curl`. The `-L` flag to `curl` ensures that if the server tells `curl` that the file has
-move, `curl` will download from the new link. Note that this `curl` command line will not resume partial downloads. The `-C -` option of `curl` does
-support resuming downloads but it has some technical differences from the way `wget` does resume of partial downloads that make it a bit trickier to use.
+moved, `curl` will download from the new link. Note that this `curl` command line will not resume partial downloads. The `-C -` option of `curl` does
+support resuming downloads but it has some technical differences from the way `wget` does resume partial downloads that make it a bit trickier to use.
 
 11. Line 24 uses `touch` to make an empty file in the `tracking` directory with the same name as the `OUTPUT` filename.
 
@@ -282,7 +281,7 @@ the downloaded files. One simple test is to check the sizes of the files. Are th
 
 <details markdown="1">
 <summary>Show answer</summary>
-Sort the listing of file sizes with `ls -l *.fastq.gz |sort -k5nr`. The `-k5` specificies that `sort` must use the 5th column for sorting and the `n` specifies that
+Sort the listing of file sizes with `ls -l *.fastq.gz |sort -k5nr`. The `-k5` specifies that `sort` must use the 5th column for sorting and the `n` specifies that
 this must be a numeric sort and finally the `r` specifies that the sort order must be reversed, with the results in descending, not ascending, order.
 
 Looking at the files sorted this way shows that `SRR8364257_1.fastq.gz` and `SRR8364257_2.fastq.gz` are dramatically smaller than the other files. This could be
@@ -315,10 +314,10 @@ What does this show? What might be going on?
 
 <details markdown="1">
 <summary>Show answer</summary>
-For most of the files we get the response that the file is OK and matches it's checksum. For sample `SRR8364261_2.fastq.gz` we get the message `FAILED`.
+For most of the files, we get the response that the file is OK and matches it's checksum. For sample `SRR8364261_2.fastq.gz` we get the message `FAILED`.
 
 Our download script did not show any errors, and we can verify this by manually re-downloading the file using `wget` or `curl` and checking the checksums
-again. This shows that either there is a problem with the checksum provided or the with the file on the remote server. This is a problem that you would raise
+again. This shows that either there is a problem with the checksum provided or with the file on the remote server. This is a problem that you would raise
 with the people who are providing the downloadable files and checksums.
 </details>
 
